2008-11-05  Miguel de Icaza  <miguel@novell.com>

	* Shell.cs: First load the System.Drawing assembly, only then call
	the using statement on it.

2008-11-02  Miguel de Icaza  <miguel@novell.com>

	* Shell.cs: Support multiple data transformations on the result.

2008-11-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* Makefile.am: Fix typo that broke make distcheck
	* MainWindows.cs: Fix compilation.

2008-11-02  Miguel de Icaza  <miguel@novell.com>

	* InteractiveGraphicsBase.cs (RegisterRenderHandler,
	UnregisterRenderHandler): new methods to allow scripts to register
	their own rendering handlers.

	(Attached): useful property to determine if we are running on an
	attached process or not.

	(MainWindow): pointer to the current main window.
	
	* MainWindow.cs: Add support for loading startup files.

	* Main.cs: Move bitmap rendering here, to split it out from the
	Shell.

	* Shell.c: Now can use any provided hook to render graphics on the
	screen. 

2008-10-31  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* gsharp.desktop.in: Add .desktop file for gsharp. 
	Name/Comment/GenericName could use some review, and no Icon is set
	yet.

	* Makefile.am: Support for .desktop file.

2008-10-24  Miguel de Icaza  <miguel@novell.com>

	* Shell.cs: Added history support. 

2008-10-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Remove gsharp.exe[.mdb] at clean-time. Fix "make 
	distcheck"

2008-10-09  Marek Habersack  <mhabersack@novell.com>

	* Makefile.am (gsharp_sources): added InteractiveGraphicsBase.cs
	and SysDrawing.cs.
	(assemblies): add reference to System.Drawing

2008-10-08  Miguel de Icaza  <miguel@novell.com>

	* Shell.cs: Loads System.Drawing and special cases rendering of Bitmaps.

	* InteractiveGraphicsBase.cs: A new base class for interactive code,
	provides a cute and simple Plot() function for interactive use.

	* SysDrawing.cs: Integration between System.Drawing and Gtk#

2008-10-09 Daniel Nauck <dna@mono-project.de>
