@@ -1,5 +1,12 @@
 2008-11-05  Miguel de Icaza  <miguel@novell.com>
 
+	* Shell.cs: Hook up the GuiStream, which redirects Console Stdout
+	and Stderr to the GUI Shell.
+
+	Readline still remains unimplemented.
+
+2008-11-05  Miguel de Icaza  <miguel@novell.com>
+
 	* Shell.cs: First load the System.Drawing assembly, only then call
 	the using statement on it.
 
